# CacheManager

./: .pre-commit-config.yaml  .pylintrc  README.ado  README.adoc  justfile  pyproject.toml
CacheManager/: __init__.py  abstract_cache_manager.py  cache_config.py  cache_item.py  cache_item_old.py  cache_manager.py  cache_manager_old.py  file_cache.py  ifaces.py  item_utility.py  mock_cache.py  object_cache.py  object_cache_old.py  pretty_path.py  serialization.py  serialization_json.py  serialization_pickle.py  settings_manager.py  sqlite_settings_manager.py
cachemanager/: __init__.py  cache_config.py  cache_item.py  cache_manager.py  object_cache.py  pretty_path.py  settings_manager.py
tests/: populate_db.py  test_cache1.py  test_custom_serialization.py  test_json_cache.py  test_mock_cache.py  test_pickled_cache.py  test_pretty_path.py  test_real_cache.py  test_sql.py
