[tool.poetry]
name = "CacheManager"
version = "0.11.0"
description = "Library that manages the cache of the data that is too expensive to compute."
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
packages = [{ include = "CacheManager"}]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.0"
EntityHash = {git = "https://github.com/adamryczkowski/EntityHash.git", rev = "master"}
humanize = "^4.12.0"
overrides = "^7.7.0"

[poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
